--- a/SuitEmUp_Basev2/SuitEmUp/SuitEmUp.vcxproj
+++ b/SuitEmUp_Basev2/SuitEmUp/SuitEmUp.vcxproj
@@ -102,7 +102,6 @@
     <ClInclude Include="Gamestate.h" />
     <ClInclude Include="Menustate.h" />
     <ClInclude Include="PlayerObject.h" />
-    <ClInclude Include="SceneNode.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteMan.h" />
     <ClInclude Include="State.h" />
@@ -115,13 +114,13 @@
     <ClCompile Include="BulletObject.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="DrawMan.cpp" />
+    <ClCompile Include="EnemyObject.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectMan.cpp" />
     <ClCompile Include="Gamestate.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Menustate.cpp" />
     <ClCompile Include="PlayerObject.cpp" />
-    <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteMan.cpp" />
     <ClCompile Include="Stateman.cpp" />
