--- a/SuitEmUp_Basev2/SuitEmUp/SuitEmUp.vcxproj.filters
+++ b/SuitEmUp_Basev2/SuitEmUp/SuitEmUp.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClInclude Include="PlayerObject.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="SceneNode.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="Gamestate.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
@@ -116,9 +113,6 @@
     <ClCompile Include="PlayerObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
-    <ClCompile Include="SceneNode.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
     <ClCompile Include="Sprite.cpp">
       <Filter>Source Files\Other</Filter>
     </ClCompile>
@@ -139,6 +133,9 @@
     </ClCompile>
     <ClCompile Include="AnimatedSprite.cpp">
       <Filter>Source Files\Other</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyObject.cpp">
+      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
